0028240: Avoid redundant search for span index in evaluation of BSpline cache